<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home_page" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map_icon"
            android:title="@string/map" />

        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/forum_icon"
            android:title="@string/forum" />
    </group>



        <item
            android:id="@+id/profile"
            android:title="@string/profile">

            <menu>
                <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile_icon"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/login_icon"
                    android:title="@string/login" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/logout" />
                </group>
            </menu>
        </item>

</menu>