<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/adu_bg"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:alpha="0.7"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_90sdp">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginLeft="@dimen/_100sdp"
            android:layout_marginTop="5dp"
            android:background="@drawable/location_icon"
            android:backgroundTint="@color/error" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/adumap"
            android:fontFamily="@font/anton"
            android:textColor="@color/white"
            android:textSize="@dimen/_60sdp" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="@dimen/_28sdp"
        android:layout_marginBottom="@dimen/_minus20sdp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_28sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_klasmeyt"
                android:textSize="@dimen/_20ssp"
                android:textColor="@color/primary_text"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saan_ka"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_15ssp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"/>
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/map_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/map"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:background="@drawable/bg_input"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/navigate_through_st_vincent_building"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forum_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/forum"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:background="@drawable/bg_input"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/join_klasmeyts_discussions_and_forums"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>