<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@color/primary" />

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_100sdp"
            android:layout_marginTop="5dp"
            android:background="@drawable/location_icon"
            android:backgroundTint="@color/error" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/adumap"
            android:fontFamily="@font/anton"
            android:textColor="@color/white"
            android:textSize="@dimen/_30sdp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_24sdp"
        android:paddingRight="@dimen/_24sdp">

        <EditText
            android:id="@+id/lblKlasmeyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/alfa_slab_one"
            android:inputType="none"
            android:text="@string/welcome_klasmeyt"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25ssp"
            android:text="@string/email"
            android:textColor="@color/primary_text"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_15ssp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp"
            android:text="@string/password"
            android:textColor="@color/primary_text"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_15ssp"/>
    </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logIn_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/LOGIN"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_10sdp"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:background="@drawable/bg_input"
            android:layout_marginTop="@dimen/_25sdp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_10sdp"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:background="@drawable/bg_input"
            android:layout_marginTop="@dimen/_25sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/or"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/noAcc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="View Forums without an Account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>