<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/bg_white"
    android:id="@+id/layoutDrawer"
    android:fitsSystemWindows="false"
    tools:context=".activities.forum_PostPage">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="4dp"/>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <RelativeLayout

        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@color/primary" />

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/menu_icon"
            android:backgroundTint="@color/white" />


        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_100sdp"
            android:layout_marginTop="5dp"
            android:background="@drawable/location"
            android:backgroundTint="@color/error" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/adu_map"
            android:textColor="@color/white"
            android:textSize="@dimen/_30sdp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sawarabi_gothic"
        android:gravity="center"
        android:text="@string/forum"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_30sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_post"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/primary_text"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:text="@string/post_as"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/primary_text"/>

    <EditText
        android:id="@+id/titletxt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:textSize="@dimen/_15ssp"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/primary_text"
        android:layout_marginLeft="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:background="@drawable/bg_input"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/primary_text"/>

    <EditText
        android:id="@+id/contenttxt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:hint="@string/content"
        android:textSize="@dimen/_15ssp"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/primary_text"
        android:layout_marginLeft="@dimen/_9sdp"
        android:layout_marginRight="@dimen/_9sdp"
        android:inputType="textImeMultiLine"
        android:background="@drawable/bg_input"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/post_btn"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/bg_input"
        android:text="@string/create_post"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"/>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>