<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/DrawerLayout"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    tools:context=".activities.forum_HomePage">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="4dp"/>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <RelativeLayout

        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@color/primary" />

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/menu_icon"
            android:backgroundTint="@color/white" />

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_100sdp"
            android:layout_marginTop="5dp"
            android:background="@drawable/location_icon"
            android:backgroundTint="@color/error" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/adumap"
            android:fontFamily="@font/anton"
            android:textColor="@color/white"
            android:textSize="@dimen/_30sdp" />
    </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_black"
            android:gravity="center"
            android:text="@string/forum"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_30sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_420sdp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/post_btn"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/bg_input"
        android:text="@string/new_post"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />
        
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>